--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/0mB5wO1SZ2KLjmFLKDb83q?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=>, initial-scale=1.0">
     <title>Rolo,Capstone,8/26/25</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>Rolo, He/Him</h1>
+    <ol>
+        <li>Something that represents me is sports phtotgraphy, i took it up and fell in love on the spot</li>
+        <li>"Somebody ordered pancakes, I just sip the sizzurp"-kanye west</li>
+
+    </ol>
 </body>
 </html>
