--- a/Image + A Tag.html
+++ b/Image + A Tag.html
@@ -17,6 +17,7 @@
         <li>Fortnite Chapter 2 seasons 2-4</li>
     </ol>
     <h2>Here Is A Link To The Picture</h2>
+    <img src="Dog-Eats-Something-Unknown.png" alt="no Dog-Eats-Something-Unknown" width="300" height="300">
     <p><a href="https://www.pvesc.com/what-if-your-dog-eats-something-odd-on-a-hike-on-maine-here-is-what-to-do/">Here Is the link to the picture</a></p>
 </body>
 </html>
