--- a/Image + A Tag.html
+++ b/Image + A Tag.html
@@ -17,7 +17,21 @@
         <li>Fortnite Chapter 2 seasons 2-4</li>
     </ol>
     <h2>Here Is A Link To The Picture</h2>
-    <img src="Dog-Eats-Something-Unknown.png" alt="no Dog-Eats-Something-Unknown" width="300" height="300">
     <p><a href="https://www.pvesc.com/what-if-your-dog-eats-something-odd-on-a-hike-on-maine-here-is-what-to-do/">Here Is the link to the picture</a></p>
+    <h1> Form:</h1>
+        <form>
+            <label>
+                Name: <input type="text" name="name">
+            </label><br>
+            <label>
+                are you a person? <input type="checkbox" name="person">
+            </label><br>
+            <label>
+                Favorite holiday <input type="text" name="holiday">
+            </label><br>
+            <form>
+                <button type="submit">Submit</button>
+            </form>
+        </form>
 </body>
 </html>
