--- a/FortuneTeller.html/index.html
+++ b/FortuneTeller.html/index.html
@@ -18,12 +18,29 @@
     <h1>
       Fortune Teller
     </h1>
+    <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=600&q=80" alt="Fortune Teller" style="display:block; margin:auto; width:200px;"/>
     <form name="fortuneTeller" id="fortuneTeller" action="fortune.html">
       <label for="namefield">Name:</label>
       <input type="text" id="namefield" name="name" placeholder="your name" required>
       <br>
       <label for="questionfield">Question:</label>
       <input type="text" id="questionfield" name="question" placeholder="a yes or no question">
+      <br>
+      <label for="emailfield">Email:</label>
+      <input type="email" id="emailfield" name="email" placeholder="your email">
+      <br>
+      <label for="dobfield">Date of Birth:</label>
+      <input type="date" id="dobfield" name="dob">
+      <br>
+      <label for="colorfield">Favorite Color:</label>
+      <input type="color" id="colorfield" name="color">
+      <br>
+      <label for="categoryfield">Category:</label>
+      <select id="categoryfield" name="category">
+        <option value="love">Love</option>
+        <option value="career">Career</option>
+        <option value="health">Health</option>
+      </select>
       <br>
       <input type="submit">
     </form>
